--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:label="@string/app_name" />
 
         <activity
+            android:name=".features.settings.SettingsActivity"
+            android:label="@string/app_name" />
+
+        <activity
             android:name=".features.contact.ContactUsActivity"
             android:label="@string/app_name" />
 
