--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -39,6 +39,20 @@
             android:name=".features.contact.ContactUsActivity"
             android:label="@string/app_name" />
 
+        <activity
+            android:name=".features.login.LoginActivity"
+            android:theme="@style/AppTheme"
+            android:label="Login" />
+
+        <activity
+            android:name=".features.enrollment.EnrollmentActivity"
+            android:theme="@style/AppTheme"
+            android:label="Register">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
