--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -72,5 +72,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'commons-validator:commons-validator:1.6'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
