--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.dignityhealth.myhome">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -16,44 +17,35 @@
         <activity
             android:name=".features.home.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".features.fad.FadActivity"
             android:label="@string/app_name" />
-
         <activity
             android:name=".features.profile.ProfileActivity"
             android:label="@string/app_name" />
-
         <activity
             android:name=".features.settings.SettingsActivity"
             android:label="@string/app_name" />
-
         <activity
             android:name=".features.contact.ContactUsActivity"
             android:label="@string/app_name" />
-
         <activity
             android:name=".features.login.LoginActivity"
-            android:theme="@style/AppTheme"
-            android:label="Login" />
-
-        <activity
-            android:name=".features.enrollment.EnrollmentActivity"
-            android:theme="@style/AppTheme"
-            android:label="Register">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".features.enrollment.EnrollmentActivity"
+            android:configChanges="orientation"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
+
+        <activity android:name=".features.enrollment.sq.SQActivity" />
     </application>
 
 </manifest>
