--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -34,16 +34,17 @@
             android:name=".features.login.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".features.enrollment.EnrollmentActivity"
             android:configChanges="orientation"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".features.enrollment.sq.SQActivity" />
     </application>
