--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -33,8 +33,7 @@
         <activity
             android:name=".features.login.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".features.enrollment.EnrollmentActivity"
             android:configChanges="orientation"
@@ -42,11 +41,14 @@
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name=".features.enrollment.sq.SQActivity" />
+
+        <activity android:name=".features.enrollment.tc.TermsOfServiceActivity"/>
     </application>
 
 </manifest>
