--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -28,18 +28,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-
         <activity
             android:name=".features.enrollment.EnrollmentActivity"
-            android:screenOrientation="portrait"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-
         <activity android:name=".features.enrollment.sq.SQActivity" />
         <activity android:name=".features.enrollment.tc.TermsOfServiceActivity" />
+        <activity android:name=".features.login.forgot.password.ForgotPasswordActivity"></activity>
     </application>
 
 </manifest>
