--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name=".app.NavigationActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".features.login.LoginActivity"
@@ -34,9 +35,13 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".features.enrollment.sq.SQActivity" />
-        <activity android:name=".features.enrollment.tc.TermsOfServiceActivity" />
-        <activity android:name=".features.login.forgot.password.ForgotPasswordActivity"></activity>
+        <activity android:name=".features.enrollment.sq.SQActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".features.enrollment.tc.TermsOfServiceActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".features.login.forgot.password.ForgotPasswordActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
