--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -35,13 +35,19 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".features.enrollment.sq.SQActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".features.enrollment.tc.TermsOfServiceActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".features.enrollment.sq.SQActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".features.enrollment.tc.TermsOfServiceActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".features.login.forgot.password.ForgotPasswordActivity"
             android:screenOrientation="portrait" />
+
+        <meta-data
+            android:name="net.hockeyapp.android.appIdentifier"
+            android:value="${HOCKEYAPP_APP_ID}" />
     </application>
 
 </manifest>
