--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'DignityHealthKey'
             keyPassword 'ZW5NrvArK6WzgmXe'
-            storeFile file('/Users/prokarma/Programming/dhmyhome/keystore.jks')
+            storeFile file('./../keystore.jks')
             storePassword 'ZW5NrvArK6WzgmXe'
         }
     }
