--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         </activity>
         <activity
             android:name=".features.enrollment.EnrollmentActivity"
-            android:label="@string/app_name"
+            android:label="New Enrollment"
+            android:parentActivityName=".features.login.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
