Forgot password visual designs

--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -60,6 +60,8 @@
         <activity
             android:name=".features.login.forgot.password.ForgotPasswordActivity"
             android:launchMode="singleTop"
+            android:label="Forgot Password"
+            android:parentActivityName=".features.login.LoginActivity"
             android:screenOrientation="portrait" />
 
         <meta-data
