--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -53,22 +53,30 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".features.enrollment.tc.TermsOfServiceActivity"
-            android:parentActivityName=".features.enrollment.sq.SQActivity"
             android:label="Terms Of Service"
             android:launchMode="singleTop"
+            android:parentActivityName=".features.enrollment.sq.SQActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".features.login.forgot.password.ForgotPasswordActivity"
-            android:launchMode="singleTop"
             android:label="Forgot Password"
+            android:launchMode="singleTop"
             android:parentActivityName=".features.login.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".features.contact.ContactUsActivity"
-            android:launchMode="singleTop"
             android:label="Contact Us"
+            android:launchMode="singleTop"
             android:parentActivityName=".features.login.LoginActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".app.OptionsActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:parentActivityName=".app.NavigationActivity"
+            android:screenOrientation="portrait" />
+
         <meta-data
             android:name="net.hockeyapp.android.appIdentifier"
             android:value="${HOCKEYAPP_APP_ID}" />
