--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -84,6 +84,9 @@
         <meta-data
             android:name="net.hockeyapp.android.appIdentifier"
             android:value="${HOCKEYAPP_APP_ID}" />
+
+        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="${GOOGLE_MAPS_ID}" />
     </application>
 
 </manifest>
