--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -15,7 +15,6 @@ android {
     }
 
     def HOCKEYAPP_APP_ID = "\"0ed48f0d6244471398fdf01def1ca008\""   //Old App ID? Get's redefined anyways...
-    def GOOGLE_MAPS_ID = "\"AIzaSyCMC_4NOuwJxhfDs7tD-kJeRjdswCwbowc\""
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
@@ -25,7 +24,7 @@ android {
         multiDexEnabled true
         versionCode 9
         versionName "0.1.9"
-        manifestPlaceholders = [HOCKEYAPP_APP_ID: HOCKEYAPP_APP_ID, GOOGLE_MAPS_ID: GOOGLE_MAPS_ID]
+        manifestPlaceholders = [HOCKEYAPP_APP_ID: HOCKEYAPP_APP_ID]
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -35,14 +34,12 @@ android {
         def FALSE = "false"
         def REPORT_LOGS = "REPORT_LOGS"
         def HOCKEY_ID = "HOCKEY_ID"
-        def MAPS_ID = "MAPS_ID"
         def REPORT_CRASHES = "REPORT_CRASHES"
         def REPORT_ANALYTICS = "REPORT_ANALYTICS"
         def SHOW_SETTINGS = "SHOW_SETTINGS"
         release {
             HOCKEYAPP_APP_ID = "\"4583013ff4e54e8d86a1d136ed7a82c9\""
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
-            buildConfigField STRING, MAPS_ID, GOOGLE_MAPS_ID
             buildConfigField BOOLEAN, REPORT_LOGS, FALSE
             buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, TRUE
@@ -66,7 +63,6 @@ android {
         debug {
             HOCKEYAPP_APP_ID = "\"c13b9b9cbc224c31b8e04f5a07da9799\""
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
-            buildConfigField STRING, MAPS_ID, GOOGLE_MAPS_ID
             buildConfigField BOOLEAN, REPORT_LOGS, TRUE
             buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, FALSE
@@ -81,7 +77,6 @@ android {
         }
         developer {
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
-            buildConfigField STRING, MAPS_ID, GOOGLE_MAPS_ID
             buildConfigField BOOLEAN, REPORT_LOGS, TRUE
             buildConfigField BOOLEAN, REPORT_CRASHES, FALSE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, FALSE
