--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -110,5 +110,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
     testCompile 'junit:junit:4.12'
 }
