--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.google.android.gms:play-services-location:10.2.6'
     compile 'com.squareup.picasso:picasso:2.5.2'
