--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
     compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.google.android.gms:play-services-location:10.2.6'
@@ -113,6 +114,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.aakira:expandable-layout:1.6.0@aar'
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
-    testCompile 'junit:junit:4.12'
+    compile 'com.tealium:library:5.2.0'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
+
+    testCompile 'junit:junit:4.12'
 }
