--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -105,7 +105,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.android.support:support-v4:25.3.1'
@@ -115,4 +114,5 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
     testCompile 'junit:junit:4.12'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
+    compile 'com.squareup:otto:1.3.8'
 }
