--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />-->
-    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
+    <!-- <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" /> -->
+    <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -51,7 +51,6 @@
             android:launchMode="singleTop"
             android:parentActivityName=".features.enrollment.sq.SQListActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".features.enrollment.sq.SQListActivity"
             android:label="Security Question"
@@ -76,7 +75,6 @@
             android:launchMode="singleTop"
             android:parentActivityName=".features.login.LoginActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".app.OptionsActivity"
             android:label="@string/app_name"
@@ -87,14 +85,14 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="net.hockeyapp.android.appIdentifier"
             android:value="${HOCKEYAPP_APP_ID}" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_api_key" />
+
+        <activity android:name=".features.update.UpdateActivity"></activity>
     </application>
 
 </manifest>
