--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -136,11 +136,17 @@ android {
             buildConfigField BOOLEAN, REPORT_ANALYTICS, FALSE
             buildConfigField BOOLEAN, SHOW_SETTINGS, TRUE
 
-            buildConfigField STRING, VERSIONING_URL, DEV_VERSIONING_URL
-            buildConfigField STRING, OKTA_BASE_URL, DEV_OKTA_BASE_URL
-            buildConfigField STRING, CIAM_BASE_URL, DEV_CIAM_BASE_URL
-            buildConfigField STRING, S2_BASE_URL, DEV_S2_BASE_URL
-            buildConfigField STRING, SCHEDULING_BASE, DEV_SCHEDULING_BASE
+//            buildConfigField STRING, VERSIONING_URL, DEV_VERSIONING_URL
+//            buildConfigField STRING, OKTA_BASE_URL, DEV_OKTA_BASE_URL
+//            buildConfigField STRING, CIAM_BASE_URL, DEV_CIAM_BASE_URL
+//            buildConfigField STRING, S2_BASE_URL, DEV_S2_BASE_URL
+//            buildConfigField STRING, SCHEDULING_BASE, DEV_SCHEDULING_BASE
+
+            buildConfigField STRING, VERSIONING_URL, TEST_VERSIONING_URL
+            buildConfigField STRING, OKTA_BASE_URL, TEST_OKTA_BASE_URL
+            buildConfigField STRING, CIAM_BASE_URL, TEST_CIAM_BASE_URL
+            buildConfigField STRING, S2_BASE_URL, TEST_S2_BASE_URL
+            buildConfigField STRING, SCHEDULING_BASE, TEST_SCHEDULING_BASE
 
             buildConfigField STRING, "AUTH_CLIENT_ID", "\"ausb2b0jbri7MsQGl0h7\""
             buildConfigField STRING, "CLIENT_ID", "\"0oab54ai6q0zFI8fq0h7\""
